# Tender_Expert

./: .dockerignore  .env  .gitignore  Dockerfile  app.py  document_parser.py  internet_search.py  llm_handler.py  pyproject.toml  requirements.txt
demo_files/: kp_promresurs.xlsx  kp_sidorov.docx
